# zwtool

./: utuils  websync  zwcd  zwcmd  zwcp  zwget  zwkcmd  zwp  zwping  zwpp  zwprj  zwput  zwsp  zwssh  zwstr  zwtar  zwtbin  zwtool  zwvi  zwweb
bak/: READEME  zwcd  zwtrace_bak  zwtrace_one_config
core/zwp/01_core/: block  sys
core/zwp/01_misc/: misc  yocto
core/zwp/02_kernel/: block  net  sys
core/zwpp/: abbr  current  default  pw  tmp  tools  web
core/zwpp/01_linux/: drv  sys
core/zwpp/01_mics/: ms  py  tmp
core/zwpp/02_compony/: hz
core/zwpp/03_compony/: hz
core/zwpp/03_platform/: atlas  hop  ss928
core/zwpp/04_linux/: misc  sys  yocto
core/zwpp/bd/: atlas  docker  rk3568  rk3588
core/zwpp/board/: atlas  rk3568
core/zwpp/cmd/: net  py  sys  yocto
core/zwpp/linux/: build  dbg  drv  dts  env  kernel  misc  sys  yocto
core/zwpp/misc/: py  up
core/zwsp/01_bak/app/: codestd.h  main.c
core/zwsp/01_bak/app_old/: CMakeLists.txt
core/zwsp/01_bak/ok_app/: .build.sh  codestd.h
core/zwsp/app/: CMakeLists.txt  note.sp  spt  xxx.c  xxx.h
core/zwsp/app/app/: codestd.h  main.c
core/zwsp/app/frwk_app/: CMakeLists.txt  main.c
core/zwsp/app/frwk_app/common/: CMakeLists.txt  cmpt_init.c  cmpt_init.h  common.h  link.lds  redef.h
core/zwsp/app/frwk_app/sub1/: CMakeLists.txt  sub1.c
core/zwsp/app/frwk_app/sub2/: CMakeLists.txt  sub2.c
core/zwsp/app/frwk_hal/: CMakeLists.txt  build.sh
core/zwsp/app/frwk_hal/common/: CMakeLists.txt  codestd.c  hf_utils.c  hf_utils.h
core/zwsp/app/frwk_hal/i2c/: CMakeLists.txt  hf_i2c.c  hf_i2c.h
core/zwsp/app/frwk_hal/led/: CMakeLists.txt  hf_led.c  hf_led.h
core/zwsp/app/frwk_hal/pin/: CMakeLists.txt  hf_pin.c  hf_pin.h
core/zwsp/app/frwk_hal/pwm/: CMakeLists.txt  hf_pwm.c  hf_pwm.h
core/zwsp/app/frwk_hal/scripts/install/: CMakeLists.txt  test.c
core/zwsp/app/frwk_hal/uart/: CMakeLists.txt  hf_uart.c  hf_uart.h
core/zwsp/app/light/: CMakeLists.txt  light.c  light.h  light_config.h  light_type.h
core/zwsp/bak/app_old/: codestd.h
core/zwsp/cfg/ubuntu/: note.sp
core/zwsp/cfg/ubuntu/ubuntu18/: .bashrc  READEME.md  sources.list
core/zwsp/cfg/ubuntu/ubuntu22/: .bashrc  .gitconfig
core/zwsp/cfg/vscode/: settings.json  tasks.json
core/zwsp/config/: note.sp  settings.json
core/zwsp/config/ubunut/: .bashrc  .gitconfig
core/zwsp/config/vscode_mk/: tasks.json
core/zwsp/dbg/: note.sp
core/zwsp/dbg/mem_dbg/: .build.sh  CMakeLists.txt  main.c  xxmem.c
core/zwsp/dbg/mem_dbg/_build/: CMakeCache.txt  Makefile  cmake_install.cmake  xxmem
core/zwsp/driver/: note.sp
core/zwsp/driver/assembly/01_pure/: Makefile  main.elf
core/zwsp/driver/assembly/03_c_env/: Makefile  main.c  start.S
core/zwsp/driver/assembly/04_c_lds/: Makefile  main.c
core/zwsp/driver/kmod/: Makefile  xxx.c
core/zwsp/driver/kmod_cdev/: codestd.h
core/zwsp/driver/kmod_i2c/: xxx.c
core/zwsp/driver/kmod_input/: xxx.c
core/zwsp/driver/kmod_misc/: Makefile  ckerr.h  xxx.c
core/zwsp/driver/kmod_spi/: build.sh
core/zwsp/driver/kprobe/: Makefile  jprobe.c
core/zwsp/drv/: api_drv.c  note.sp
core/zwsp/drv/assembly/: help.S
core/zwsp/drv/assembly/01_pure/: main.c  start.S
core/zwsp/drv/assembly/02_std/: Makefile  start.S
core/zwsp/drv/assembly/04_c_lds/: link.lds  start.S
core/zwsp/drv/kmod_cdev/: Makefile  xxx.c
core/zwsp/drv/kmod_i2c/: api_drv.c
core/zwsp/drv/kmod_input/: xxx.ko
core/zwsp/drv/kmod_misc/: .build.sh
core/zwsp/drv/kmod_spi/: ckerr.h  xxx.c
core/zwsp/drv/kprobe/: kprobe.c  rprobe.c
core/zwsp/drv/outmk/: Makefile
core/zwsp/drv/outmk/osmd/: Makefile  ckret.h
core/zwsp/kernel/: note.sp
core/zwsp/kernel/kmod_misc/: xxx.c
core/zwsp/kernel/kmod_misc/app/: main.c
core/zwsp/kernel/kmod_misc/kmod/: xxx.c  xxx.ko
core/zwsp/kernel/osmd/: .Module.symvers.cmd  .build.sh  .gitignore  .modules.order.cmd  .osmd.mod.cmd  readme.md
core/zwsp/kernel/osmd/01_app/: CMakeLists.txt  main.c
core/zwsp/note/: base.rst  index.rst  note.sp  root_index.rst  test.rst
core/zwsp/note/class_driver/: index.rst
core/zwsp/tmp/: Makefile  note.sp
core/zwsp/ubuntu/ubuntu18/: .vimrc  install
core/zwsp/ubuntu/ubuntu22/: bashrc_root
core/zwsp/zwtools/: sample_scp
scripts/embed/: zwcd  zwcmd
scripts/templete/work/zwscp/: hosts
tools/embed/: zwvi
tools/scripts/: com_host  com_p  com_wf  com_x  utils
tools/templete/: env  hosts  index.rst
(+53 files in other folders)
